WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189203
Compile error in RealtimeOutgoingVideoSource.cpp; unused parameter in libwebrtc header
https://bugs.webkit.org/show_bug.cgi?id=189203
Summary
Compile error in RealtimeOutgoingVideoSource.cpp; unused parameter in libwebr...
Jer Noble
Reported
2018-08-31 12:50:18 PDT
Compile error in RealtimeOutgoingVideoSource.cpp; unused parameter in libwebrtc header
Attachments
Patch
(1.57 KB, patch)
2018-08-31 12:52 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-08-31 12:52:12 PDT
Created
attachment 348665
[details]
Patch
WebKit Commit Bot
Comment 2
2018-08-31 16:22:55 PDT
Comment on
attachment 348665
[details]
Patch Clearing flags on attachment: 348665 Committed
r235575
: <
https://trac.webkit.org/changeset/235575
>
WebKit Commit Bot
Comment 3
2018-08-31 16:22:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-08-31 16:23:16 PDT
<
rdar://problem/43960652
>
Darin Adler
Comment 5
2018-09-01 21:29:56 PDT
Would be nice to eventually change this in libwebrtc itself unless there is some reason the header has to have an unused parameter in it. Even if the libwebrtc project itself doesn’t want to compile with this warning, it’s nice for headers at least to be compatible with it.
youenn fablet
Comment 6
2018-09-07 12:39:33 PDT
(In reply to Darin Adler from
comment #5
)
> Would be nice to eventually change this in libwebrtc itself unless there is > some reason the header has to have an unused parameter in it. Even if the > libwebrtc project itself doesn’t want to compile with this warning, it’s > nice for headers at least to be compatible with it.
We started discussing with the project upstream but there is no concrete plan yet there. I am not sure how tractable it would be for the upstream project to make the headers compatible without actually enforcing this at compile time. We were previously patching these files but this proved to be a hurdle for every libwebrtc refresh. We should probably try to reduce WebCore dependency on libwebrtc headers.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug