Compile error in RealtimeOutgoingVideoSource.cpp; unused parameter in libwebrtc header https://bugs.webkit.org/show_bug.cgi?id=189203

Reviewed by Youenn Fablet.

If RealtimeOutgoingVideoSource.cpp is compiled alone (non-unified) or if it is the first file compiled in
a unified build, there is no pragma set to ignore unused parameter warnings in place.

* platform/mediastream/RealtimeOutgoingVideoSource.cpp:


Canonical link: https://commits.webkit.org/204223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235575 268f45cc-cd09-0410-ab3c-d52691b4dbfc